--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "News manager",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "mkdir cache"
   },
   "repository": {
     "type": "git",
