--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.1",
     "cheerio": "^0.22.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.2",
     "pg": "^6.1.2"
   }
 }
